# flask-micro-chat

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.docker/: start-app.sh
doc/: schema-prisma.txt  scheme.prisma  tree-relations-tr.txt  tree-relations.txt  tree.txt
prisma/: schema.prisma
prisma/migrations/20240820140428_add_user_room_member_message_models/: migration.sql
src/flask_app/: app.py  server.py
src/flask_app/__share/config/: enviroment.py
src/flask_app/__share/config/envs/: enviroment.py
src/flask_app/__share/constants/: routes_constant.py
src/flask_app/__share/database/prisma/: db.py
src/flask_app/modules/__api/v1/users/controllers/: users_controller.py
src/flask_app/modules/__api/v1/users/providers/: users_providers.py
src/flask_app/modules/__api/v1/users/routes/: users_routes.py
src/flask_app/modules/__api/v1/users/services/: users_services.py
src/flask_app/modules/admin/users/controllers/: users_controller.py
src/flask_app/modules/admin/users/routes/: users_routes.py
src/flask_app/modules/admin/users/views/: index_users.html
src/flask_app/modules/api/users/controllers/: users_controller.py
src/flask_app/modules/api/users/routes/: users_routes.py
